k8s/database_service/middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: database-stripprefix
  namespace: ns-welhome
spec:
  stripPrefix:
    prefixes:
      - /psql
