k8s/database_service/deployment.yml
# Kubernetes API version
apiVersion: apps/v1
# Deployment object
kind: Deployment
metadata:
  # The name of the Deployment
  name: database-service
  labels:
    app: welhome
    micro-service: database-service
  namespace: ns-welhome
spec:
  # Replicas for this Deployment
  replicas: 1
  selector:
    # labels the pods
    matchLabels:
      app: welhome
      micro-service: database-service
  template:
    metadata:
      labels:
        app: welhome
        micro-service: database-service
    spec:
      containers:
        # The container name to execute pods
        - name: database-service
          image: afkbeto/welhome-database-service:1.0.2
          ports:
            # Assign ports to expose container
            - containerPort: 9090
          volumeMounts:
            - name: db-service-secret
              mountPath: usr/app/application.properties
              subPath: application.properties

      volumes:
        - name: db-service-secret 
          secret:
            secretName: database-service-secret
            items:
              - key: application.properties
                path: application.properties
