k8s/database_service/service.yml
apiVersion: v1
# Kind for service
kind: Service
metadata:
  # Name your service
  name: database-service
  labels:
    app: welhome
    micro-service: database-service
  namespace: ns-welhome
spec:
  # Choose how to expose your service
  type: LoadBalancer
  ports:
    # The port number to expose the service
    - name: psqldb
      port: 9090
      targetPort: 9090
  # Pod to route service traffic  
  selector:
    app: welhome
    micro-service: database-service
